WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89996
[chromium] The single thread proxy should not automatically tick new animations.
https://bugs.webkit.org/show_bug.cgi?id=89996
Summary
[chromium] The single thread proxy should not automatically tick new animations.
vollick
Reported
2012-06-26 11:03:13 PDT
This will be needed eventually for the layout tests (and when it is needed, it should be enabled by a setting). For the time being, the code should be disabled.
Attachments
Patch
(1.55 KB, patch)
2012-06-26 11:25 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
Patch
(10.83 KB, patch)
2012-06-26 11:42 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-06-26 11:18:37 PDT
***
Bug 89917
has been marked as a duplicate of this bug. ***
vollick
Comment 2
2012-06-26 11:25:35 PDT
Created
attachment 149570
[details]
Patch
James Robinson
Comment 3
2012-06-26 11:26:59 PDT
Comment on
attachment 149570
[details]
Patch R=me, but I think I'd prefer deleting the m_animationTimer and associated code completely - we can retrieve it from the SVN history and re-apply it once we get around to enabling this stuff for DRT
vollick
Comment 4
2012-06-26 11:42:51 PDT
Created
attachment 149574
[details]
Patch
WebKit Review Bot
Comment 5
2012-06-26 12:34:38 PDT
Comment on
attachment 149574
[details]
Patch Clearing flags on attachment: 149574 Committed
r121277
: <
http://trac.webkit.org/changeset/121277
>
WebKit Review Bot
Comment 6
2012-06-26 12:34:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug