[chromium] The single thread proxy should not automatically tick new animations. https://bugs.webkit.org/show_bug.cgi?id=89996

Patch by Ian Vollick <vollick@chromium.org> on 2012-06-26
Reviewed by James Robinson.

Source/WebCore:

No new tests. No change to existing functionality.

* platform/graphics/chromium/cc/CCSingleThreadProxy.cpp:
(WebCore::CCSingleThreadProxy::CCSingleThreadProxy):
(WebCore::CCSingleThreadProxy::initializeLayerRenderer):
(WebCore::CCSingleThreadProxy::didAddAnimation):
* platform/graphics/chromium/cc/CCSingleThreadProxy.h:
(WebCore):

Source/WebKit/chromium:

* WebKit.gypi:
* tests/CCSingleThreadProxyTest.cpp: Removed.

Canonical link: https://commits.webkit.org/107846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121277 268f45cc-cd09-0410-ab3c-d52691b4dbfc